# SFML_CmakeLists_Template

./: CMakeLists.txt
